--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: 1.0.2
+  
   flutter:
     sdk: flutter
-  hive:
+  hive: 2.0.4
+  hive_flutter: 1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,8 +41,12 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: 2.1.5
+  
   flutter_test:
     sdk: flutter
+  hive_generator: 1.1.1
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
