--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   
   flutter:
     sdk: flutter
-  hive: 2.0.4
+  hive: ^2.2.3
   hive_flutter: 1.1.0
 
 
@@ -41,11 +41,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  build_runner: 2.1.5
-  flutter_lints: 1.0.0
+  build_runner: ^2.3.3
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  hive_generator: 1.1.1
+  hive_generator: ^2.0.0
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
